--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.0",
+    "howler": "^2.2.4",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "react": "^18",
